k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-svc
  namespace: demo-tf
spec:
  type: ClusterIP
  selector:
    app: test-app
  ports:
    - port: 80
      targetPort: 80
